# ChatOpsLLM

./: .gitignore  Makefile  README.md
apps/api/: Makefile  docker-compose-lite.yaml  docker-compose-mac.yaml  pyproject.toml
apps/api/chatopsllm_api/: dependencies.py  main.py
apps/api/chatopsllm_api/cache/: semantic_cache.py
apps/api/chatopsllm_api/chat_completion/: chat_completion.py  conversation_handler.py  prompt_enhancer.py
apps/api/chatopsllm_api/configs/path_config/: __init__.py
apps/api/chatopsllm_api/configs/prompt_config/: prompt_loader.py
apps/api/chatopsllm_api/llms/: base.py  litellm.py
apps/api/chatopsllm_api/rag/: __init__.py  embeddings.py  qdrant_store.py  retriever.py
apps/api/chatopsllm_api/websocket/: __init__.py  ws_handler.py
apps/api/chatopsllm_api/worker/: __init__.py  celery_app.py  tasks.py
apps/api/tests/: test_celery_tasks.py  test_rag.py  test_semantic_cache.py  test_system.py  test_websocket.py
apps/data_pipeline/: requirements.txt
apps/data_pipeline/chunks/: chunker.py
apps/data_pipeline/dags/: ingest_pipeline.py
apps/data_pipeline/embeddings/: embedder.py
apps/data_pipeline/storage/: minio_client.py  qdrant_uploader.py
apps/web/: .env.example  Makefile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/components/: ChatInput.tsx  ChatbotUI.tsx  MessageBubble.tsx  SettingsPanel.tsx
apps/web/src/: ChatbotUI.js  useChat.js
ci/: Jenkinsfile
deployments/kong/: Chart.yaml  values.yaml
scripts/: cluster.sh  cluster_config.sh
tests/: test_chunker.py
